--- a/views/dashboard-desktop.html
+++ b/views/dashboard-desktop.html
@@ -111,6 +111,7 @@
         color: white;
     }
     .card.active-menu .card.header-menu .title{
+        font-size: 4vh;
         min-width: fit-content;
         justify-content: center;
         align-items: center;
@@ -118,6 +119,8 @@
         background-color: #007AFF;
         color: white;
         box-shadow: none;
+        margin-left: 1vh;
+        margin-right: 1vh;
     }
     .card.active-menu .card.header-menu div{
         min-width: fit-content;
@@ -399,6 +402,7 @@
         width: calc(100% - 2vh);
     }
     .table .card.footer-table .text{
+        cursor: pointer;
         background-color: white;
         color: #007AFF;
         border-radius: 10px;
@@ -413,6 +417,7 @@
         white-space: nowrap;
     }
     .table .card.footer-table .text.blue{
+        cursor: default;
         background-color: #007AFF;
         color: white;
     }
