--- a/views/sign-up-desktop.html
+++ b/views/sign-up-desktop.html
@@ -177,6 +177,10 @@
         border-radius: 10px;
         transition: background-color 0.3s;
         margin-left: 1vh;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     .switch-switch {
