--- a/views/dynamic/inventory.html
+++ b/views/dynamic/inventory.html
@@ -1,7 +1,6 @@
 <div class="card header-menu">
-    <div class="title">Inventory</div>
 </div>
-<div class="card body-menu">
+<div id="body-menu" class="card body-menu">
     <div class="table">
         <div class="card header-table">
             <div class="text">Action Buttons</div>
@@ -21,15 +20,14 @@
     </div>
 </div>
 <script>
-    let menu = 'inventory'
-    let page = 1;
-    let size = 10;
+    page = 1;
+    size = 10;
     getItemListAPI()
     
     async function getItemListAPI(incrementDecrement = 0){
         page = page + (incrementDecrement * 1)
         if(page < 1){
-            page = 0
+            page = 1
         }
         let settings = {
             "url": `${(new URL(window.location)).origin}/api/v1/item/view/list`,
@@ -42,14 +40,44 @@
             "data": JSON.stringify({
                 "editorEmail": `${(new URLSearchParams(window.location.search).get("email"))}`,
                 "companyUUID": `${(new URLSearchParams(window.location.search).get("uuid"))}`,
-                "page": `${page}`,
-                "size": `${size}`
+                "page": page,
+                "size": size
             }),
         };
 
         await $.ajax(settings).done(async function (response) {
             if(!response.items){
+                console.log(response)
                 $(`body`).append(`
+                    <style>
+                        .card.main-background{
+                            position: fixed;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-color: rgba(0, 0, 0, 0.7);
+                            gap: 1vh;
+                            border-radius: 0%;
+                        }
+                        .card.pop-up{
+                            width: 50%;
+                            position: fixed;
+                            left: calc(25%);
+                            top: calc(12.5%);
+                            background-color: #007AFF;
+                            color: white;
+                        }
+                        .card.title{
+                            background-color: #007AFF;
+                            color: white;
+                            font-size: 3vh;
+                        }
+                        .card.content-text{
+                            margin-top: 1vh;
+                            font-size: 2.5vh;
+                        }
+                    </style>
                     <div class="card main-background" onclick="clearPopUp()">
                     </div>
                     <div class="card pop-up">
@@ -63,17 +91,22 @@
                 `)
             }else{
                 const accessAllowed = await getMenuActionAccessAPICall()
-                accessAllowed['Create']? $(`.card.header-menu`).append(`<div onclick="renderCreateItem()" class="card header-menu-element">Create New Item</div>`) : 
+                $(`.card.header-menu`).empty()
+                $(`.card.header-menu`).append(`<div class="title">Inventory</div>`)
+                $(`.card.header-menu`).append(`
+                    ${accessAllowed['Create']? `<div onclick="renderCreateItem()" class="card header-menu-element">Create New Item</div>` : ``}
+                `)
                 
                 $(`.card.body-table`).empty()
                 for(const eachItem of response.items){
+                    console.log(eachItem)
                     $(`.card.body-table`).append(`
                         <div class="card body-row-table">
                             <div class="text action-buttons-group">
-                                ${accessAllowed['Edit']? `<div class="action-button" onclick="editItem('${eachItem.itemSKU}', '${eachItem.companyUUID}')">
+                                ${accessAllowed['Edit']? `<div class="action-button" onclick="editItem('${eachItem.itemUUID}', '${eachItem.itemSKU}', '${eachItem.companyUUID}')">
                                     Edit
                                 </div>` : "" }
-                                ${accessAllowed['View']? `<div class="action-button" onclick="viewItemDetails('${eachItem.itemSKU}', '${eachItem.companyUUID}')">
+                                ${accessAllowed['View']? `<div class="action-button" onclick="viewItemDetails('${eachItem.itemUUID}', '${eachItem.itemSKU}', '${eachItem.companyUUID}')">
                                     View Details
                                 </div>` : "" }
                             </div>
@@ -88,8 +121,77 @@
         });
     }
 
-    function editItem(itemSKU, companyUUID){
+    function renderCreateItem(){
+        $(`.card.header-menu`).empty()
+        $(`.card.header-menu`).append(`<div class="title">Inventory</div>`)
+        $(`.card.header-menu`).append(`<div onclick="renderBackTable()" class="card header-menu-element">Back To List</div>`)
+        renderForm('inventoryForm')
+    }
 
+    function renderBackTable(){
+        $(`#body-menu`).empty()
+        $(`#body-menu`).append(`
+            <div class="table">
+                <div class="card header-table">
+                    <div class="text">Action Buttons</div>
+                    <div class="text">Item Name</div>
+                    <div class="text">Item SKU</div>
+                    <div class="text">Quantity</div>
+                    <div class="text">Sell Price</div>
+                </div>
+                <div class="card body-table">
+                    
+                </div>
+                <div class="card footer-table">
+                    <div class="text" onclick="getItemListAPI('-1')">Previous</div>
+                    <div class="text blue">Page :</div>
+                    <div class="text" onclick="getItemListAPI('1')">Next</div>
+                </div>
+            </div>
+        `)
+        getItemListAPI()
+    }
+
+    function viewItemDetails(itemUUID, itemSKU, companyUUID){
+        $(`.card.header-menu`).empty()
+        $(`.card.header-menu`).append(`<div class="title">Inventory</div>`)
+        $(`.card.header-menu`).append(`<div onclick="renderBackTable()" class="card header-menu-element">Back To List</div>`)
+        renderForm('inventoryForm', itemUUID, itemSKU, "View")
+    }
+
+    function editItem(itemUUID, itemSKU, companyUUID){
+        $(`.card.header-menu`).empty()
+        $(`.card.header-menu`).append(`<div class="title">Inventory</div>`)
+        $(`.card.header-menu`).append(`<div onclick="renderBackTable()" class="card header-menu-element">Back To List</div>`)
+        renderForm('inventoryForm', itemUUID, itemSKU, "Edit")
+    }
+
+    function renderForm(wantedMenu, paramHelper1, paramHelper2, param1){
+        renderSubMenuAPI(wantedMenu, paramHelper1, paramHelper2, param1)
+    }
+
+    async function renderSubMenuAPI(wantedMenu, paramHelper1 = null, paramHelper2 = null, param1 = null){
+        let settings = {
+            "url": `${(new URL(window.location)).origin}/sub-page/${wantedMenu}?pageToken=${(new URLSearchParams(window.location.search)).get("pageToken")}&email=${(new URLSearchParams(window.location.search)).get("email")}&uuid=${(new URLSearchParams(window.location.search).get("uuid"))}&param1=${param1}`,
+            "method": "GET",
+            "timeout": 0,
+            "headers": {
+                "Content-Type": "application/json"
+            }
+        };
+
+        await $.ajax(settings).done(async function (response) {
+            if(response){
+                $(`#body-menu`).empty()
+                $(`#body-menu`).append(`
+                    <div id="paramHelper1" hidden>${paramHelper1}</div>
+                    <div id="paramHelper2" hidden>${paramHelper2}</div>
+                    <div id="param1" hidden>${param1}</div>
+                    ${response}
+                `)
+            }
+            console.log(response)
+        });
     }
 
     async function getMenuActionAccessAPICall(){
@@ -104,7 +206,7 @@
             "data": JSON.stringify({
                 "email": `${(new URLSearchParams(window.location.search).get("email"))}`,
                 "uuid": `${(new URLSearchParams(window.location.search).get("uuid"))}`,
-                "menu": `${menu}`
+                "menu": `${'inventory'}`
             }),
         };
 
@@ -114,6 +216,35 @@
                 console.log(response.access[0])
                 if(!response.access){
                     $(`body`).append(`
+                        <style>
+                            .card.main-background{
+                                position: fixed;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                background-color: rgba(0, 0, 0, 0.7);
+                                gap: 1vh;
+                                border-radius: 0%;
+                            }
+                            .card.pop-up{
+                                width: 50%;
+                                position: fixed;
+                                left: calc(25%);
+                                top: calc(12.5%);
+                                background-color: #007AFF;
+                                color: white;
+                            }
+                            .card.title{
+                                background-color: #007AFF;
+                                color: white;
+                                font-size: 3vh;
+                            }
+                            .card.content-text{
+                                margin-top: 1vh;
+                                font-size: 2.5vh;
+                            }
+                        </style>
                         <div class="card main-background" onclick="clearPopUp()">
                         </div>
                         <div class="card pop-up">
