--- a/views/subdashboard-desktop.html
+++ b/views/subdashboard-desktop.html
@@ -69,6 +69,10 @@
     }
     .card.option{
         cursor: pointer;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
     .card.body{
         flex-direction: row;
@@ -87,6 +91,10 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
     .card.company .text{
         max-width: 100%;
@@ -109,6 +117,10 @@
         cursor: pointer;
         width: fit-content;
         margin: 1vh;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
     .card .input-group{
         margin: 1vh;
