--- a/views/dynamic/inventoryForm.html
+++ b/views/dynamic/inventoryForm.html
@@ -70,12 +70,16 @@
         background-color: darkred;
         color: white;
     }
+    button:disabled {
+        background-color: #666666 !important;
+        cursor: not-allowed !important;
+    }
 </style>
 <div class="card grouped">
     <label>Item SKU</label>
     <div class="grouped-input">
         <input id="item-sku-input" class="" type="text" placeholder="" />
-        <button class="" onclick="autoGenerate(this)">Auto-Generate</button>
+        <button id="auto-generate-uuid" onclick="autoGenerate(this)">Auto-Generate</button>
     </div>
 </div>
 <div class="card grouped">
@@ -174,6 +178,7 @@
     function checkPreActionRequest(){
         if($(`#param1`).text() == "View"){
             $(`#item-sku-input`).prop('disabled', true)
+            $(`#auto-generate-uuid`).prop('disabled', true)
             $(`#item-name-input`).prop('disabled', true)
             $(`#item-qty-input`).prop('disabled', true)
             $(`#item-unit-qty-input`).prop('disabled', true)
@@ -198,6 +203,7 @@
             $(`.save-button`).hide()
 
             $(`#item-sku-input`).prop('disabled', true)
+            $(`#auto-generate-uuid`).prop('disabled', true)
             
             const payload = {
                 "companyUUID": `${(new URLSearchParams(window.location.search).get("uuid"))}`,
@@ -352,6 +358,51 @@
                 $(`#item-purchase-price-currency-input`).val(response.item.itemCurrencyBuyPrice)
                 $(`#item-storage-location-name-input`).val(response.item.storageLocationName)
                 $(`#item-storage-location-address-input`).val(response.item.storageLocationAddress)
+            }else if(response.itemUUID){
+                $(`body`).append(`
+                    <style>
+                        .card.main-background{
+                            position: fixed;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-color: rgba(0, 0, 0, 0.7);
+                            gap: 1vh;
+                            border-radius: 0%;
+                        }
+                        .card.pop-up{
+                            width: 50%;
+                            position: fixed;
+                            left: calc(25%);
+                            top: calc(12.5%);
+                            background-color: #007AFF;
+                            color: white;
+                        }
+                        .card.title{
+                            background-color: #007AFF;
+                            color: white;
+                            font-size: 3vh;
+                        }
+                        .card.content-text{
+                            margin-top: 1vh;
+                            font-size: 2.5vh;
+                        }
+                    </style>
+                    <div class="card main-background" onclick="clearPopUp()">
+                    </div>
+                    <div class="card pop-up">
+                        <div class="card title">
+                            Success Notification
+                        </div>
+                        <div class="card content-text">
+                            Your action has been successfully logged
+                        </div>
+                    </div>
+                `)
+                setTimeout(() => {
+                    $(".card.header-menu-element").click();
+                }, 1000);
             }
         });
     }
